# floor_plan_from_image

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  app.py  pyproject.toml  test.dvc
experiments/general/: preview.py  vid2img.py
experiments/yolo_training/: compare_models.py
experiments/yolo_training/innodorm_finetune/: args.yaml  results.csv
notebooks/: yolo_training.ipynb
scripts/: install_master_slam.sh
src/: config.py  furniture_clusterer.py  label_projector.py  main_pipeline.py  point_cloud_processor.py  preview_mesh.py  reconstruction.py  segmentation.py  utils.py  visualize_3d_results.py  visualizer.py  yolo_wrapper.py
