[project]
name = "floor-plan-from-image"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir",email = "vpd63@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "open3d (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
